sortable test names; special className for visible popup; popup handlers for showing and closing; ctrl + right/left to change page (also, fixed their links); fixed "concatenation instead of addition" in generate pageList

--- a/styles.css
+++ b/styles.css
@@ -293,6 +293,10 @@ table.main th.sortAsc > span > a::before {
 	display: none;
 }
 
+.popupWrapper.editing {
+	display: block;
+}
+
 .popup {
 	background-color: #fff;
 	width: 730px;
